--- a/assets/templates/global/header.html
+++ b/assets/templates/global/header.html
@@ -1,10 +1,9 @@
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container" style="background-color: #f8f8f8">
+<div class="navbar navbar-default navbar-static-top" role="navigation">
+      <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Nick Incardone</a>
+
+          <a class="navbar-brand" href="#">Nick Incardone's Quiz App</a>
         </div>
-        <!--/.nav-collapse -->
+
+      </div>
     </div>
-</div>
-
-
