choices to question now are in random order

--- a/assets/templates/quiz/quiz.html
+++ b/assets/templates/quiz/quiz.html
@@ -30,6 +30,6 @@
     </p>
   </div>
   <center>
-  <button ng-click="quizDone = false">Retry Quiz</button>
+  <button ng-click="retryQuiz()">Retry Quiz</button>
   </center>
 </div>
